deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: software-factory
  labels:
    argocd.argoproj.io/managed-by: argocd
