deploy/base/sf_prod-retired-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
spec:
  replicas: 0
