deploy/base/software-factory-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: software-factory-backend
  labels:
    app: software-factory-backend
spec:
  selector:
    app: software-factory-backend
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
