deploy/base/software-factory-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: software-factory-frontend
  labels:
    app: software-factory-frontend
spec:
  selector:
    app: software-factory-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
