deploy/base/softwarefactory-dashboard-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: softwarefactory-dashboard-backend
  labels:
    app: softwarefactory-dashboard-backend
spec:
  selector:
    app: softwarefactory-dashboard-backend
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
